Fix layout shift when elastic-nav is loading (#1532)
* Fix layout shift when elastic-nav is loading

* Remove unnecessary height css attribute

--- a/src/Elastic.Documentation.Site/Assets/styles.css
+++ b/src/Elastic.Documentation.Site/Assets/styles.css
@@ -177,9 +177,11 @@
 	}
 }
 
-#elastic-nav {
+#elastic-nav-wrapper {
 	min-height: var(--offset-top);
+}
 
+#elastic-nav {
 	@media screen and (min-width: 1200px) {
 		.oldNav {
 			& > div {
